<resources>
    <string name="app_name">SlWatch</string>
    <string name="b_watch">Sl Watch</string>
    <string name="sign_in_google">Sign in With Google</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="cant_login">Can not log into account?</string>
    <string name="alreadyAcc">Already have an account?</string>
    <string name="registration">Sign UP</string>
    <string name="regLogin">Login</string>
    <string name="regPass">Password</string>
    <string name="regEmail">E-mail</string>
    <string name="myProfile">My Profile</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="call">Call</string>
    <string name="pulse">Pulse</string>
    <string name="beatheart">Beat Heart</string>
    <string name="Steps">Steps</string>
    <string name="geolocation">Location</string>
    <string name="updateLocation">Update Location</string>
    <string name="voicechat">Voice chat</string>
    <string name="bloodpressure">Blood pressure</string>
    <string name="pedometer">Pedometer</string>
    <string name="calendar">Calendar</string>
    <string name="oxygen">Oxygen</string>
    <string name="goal">My Goals</string>
    <string name="sleep">Sleep</string>
    <string name="progress">Progress</string>
    <string name="soon">Will be soon</string>
    <string name="updateData">Update Data</string>
    <string name="saveSettings">Save Settings</string>
    <string name="saveSucces">Settings have been saved</string>
    <string name="watchName">Watch name</string>
    <string name="imei">Imei</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="PhoneNimber">Watch phone number</string>
    <string name="warningImei">IMEI is wrong</string>
    <string name="kcal">Kcal</string>
    <string name="hour">Hour</string>
    <string name="url">http://slwatch.uni-dubna.ru:8080</string>
    <string name="invalidPwlength">Password must be longer than 8 characters</string>
    <string name="invalidEmail">Email is invalid</string>
    <string name="firstTime">First time with us?</string>
    <string name="enterimei">Enter IMEI here</string>
    <string name="continueLogin">Continue</string>
</resources>
