<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedometerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:navigationIcon="@drawable/ic_settings"
        app:layout_constraintTop_toTopOf="parent"

        app:titleMarginTop="30dp"
        >


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pedometer"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileToolbar" />

    <TextView
        android:id="@+id/textPedometerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="Today"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <ProgressBar
        android:id="@+id/progressBarPedometrPedometer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="97dp"
        android:progressDrawable="@drawable/right_progress_pedo"
        android:background="@drawable/background_pedo"
        android:max="100"
        android:progress="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPedometerTitle" />

    <LinearLayout
        android:id="@+id/totalPedometerLin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarPedometrPedometer"
        app:layout_constraintEnd_toEndOf="@+id/progressBarPedometrPedometer"
        app:layout_constraintStart_toStartOf="@+id/progressBarPedometrPedometer"
        app:layout_constraintTop_toTopOf="@+id/progressBarPedometrPedometer">

        <TextView
            android:id="@+id/textTotalGoalSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textSize="47sp" />

        <TextView
            android:id="@+id/statTextTotalGoalSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Steps"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/pedometerSleepCard"
        android:layout_width="120dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarPedometrPedometer">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|start"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6 h 45 min"
                android:textAlignment="textStart"
                android:textColor="@color/colorUltramarin"
                android:textSize="19sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pedometerActivityCard"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarPedometrPedometer">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|start"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Activity"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 h 33 min"
                android:textAlignment="textStart"
                android:textColor="@color/colorUltramarin"
                android:textSize="19sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/pedometerHistoryCard"
        android:layout_width="280dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pedometerActivityCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|start"
                android:layout_margin="12dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yesterday"
                    android:textColor="@color/colorUltramarin"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="6 h 45 min"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorUltramarin"
                    android:textSize="19sp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pedoProgressBarHistory"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:progress="80"
                android:progressDrawable="@drawable/pedometer_progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/totalLin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/pedoProgressBarHistory"
                app:layout_constraintEnd_toEndOf="@+id/pedoProgressBarHistory"
                app:layout_constraintStart_toStartOf="@+id/pedoProgressBarHistory"
                app:layout_constraintTop_toTopOf="@+id/pedoProgressBarHistory">

                <TextView
                    android:id="@+id/textTotalSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="4444"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/statTextTotalSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Steps"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/bottom_navigation"
        app:itemIconTint="@color/bottom_item_colors"
        app:itemTextColor="@color/bottom_item_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_menu"></com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>